test/cli/test/images/any-all-attestor/kyverno-test.yaml
name: test-image-any-all-attestor
policies:
  - policies.yaml
resources:
  - resources.yaml
results:
  - policy: multiple-key-any-all
    rule: check-image-keyless
    resource: signed
    kind: Pod
    status: pass
  - policy: multiple-key-any-all
    rule: check-image-keyless
    resource: unsigned
    kind: Pod
    status: fail
